--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,2 +1,4 @@
 @import '../scss/Aside/aside.scss';
+@import '../scss/Main/main.scss';
+@import '../scss/Chat-container/chat-container.scss';
 @import '../../assets/reset/reset.scss';
