--- a/src/assets/scss/Aside/aside.scss
+++ b/src/assets/scss/Aside/aside.scss
@@ -43,12 +43,15 @@
       }
     }
 
-    .chat {
+    #chats {
       padding: 15px 5px;
+      overflow: auto;
 
       .user {
         display: flex;
         flex-direction: row;
+        padding: 5px 0;
+        cursor: pointer;
 
         .avatar {
           margin-right: 15px;
@@ -62,36 +65,6 @@
 
         .name {
           color: $primary-color;
-        }
-      }
-    }
-  }
-
-  .container {
-    width: 100%;
-
-    .main {
-      background-color: #0e1621;
-      height: 100vh;
-
-      .block {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-top: 400px;
-      }
-
-      .border {
-        width: 245px;
-        background-color: #1e2c3a;
-        border-radius: 15px;
-        padding: 5px 0px;
-
-        .info {
-          color: $primary-color;
-          font-size: 15px;
-          font-weight: 600;
-          text-align: center;
         }
       }
     }
