--- a/src/assets/scss/Chat-container/chat-container.scss
+++ b/src/assets/scss/Chat-container/chat-container.scss
@@ -68,49 +68,62 @@
     }
   }
 
-  .chat-content {
+  .chat-block {
     max-width: 400px;
     padding: 15px 0 0 15px;
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
     height: calc(100vh - 144px);
+    justify-content: flex-end;
 
-
-    .chat-row {
+    .chat-content {
       display: flex;
-      flex-direction: row;
-      align-items: center;
+      flex-direction: column;
+      //.chat-date{
+      //
+      //}
 
-      .avatar {
-        padding-right: 20px;
+      .message-block {
+        .message-content {
+          display: flex;
+          flex-direction: row;
+          align-items: flex-end;
 
-        img {
-          width: 40px;
-          height: 40px;
-          border-radius: 20px;
+          .avatar {
+            img {
+              width: 40px;
+              height: 40px;
+              border-radius: 20px;
+            }
+          }
+
+          .message-group {
+            display: flex;
+            flex-direction: column;
+
+            .message {
+              padding: 10px 15px;
+              border-radius: 20px;
+              width: 110px;
+              background: #242f3d;
+              display: flex;
+              position: relative;
+
+              .time {
+                position: absolute;
+                right: 12px;
+                bottom: 5px;
+                font-size: 13px;
+              }
+            }
+          }
         }
-      }
-
-      .message-content {
-        display: flex;
-        flex-direction: row;
-        background-color: darkgrey;
-        padding: 10px 15px;
-        border-radius: 20px;
-        width: 110px;
-        position: relative;
-
-        .time {
-          position: absolute;
-          right: 12px;
-          bottom: 5px;
-          font-size: 13px;
-        }
-
       }
     }
+
   }
+
 
   .input-message {
     padding: 10px 0px;
