--- a/src/assets/scss/Main/main.scss
+++ b/src/assets/scss/Main/main.scss
@@ -4,7 +4,7 @@
   display: flex;
 
   .container {
-    width: 1530px;
+    width: 100%;
 
     #main {
       background-color: $background-color-chat;
